--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "App Imc",
-    "slug": "app-imc",
+    "name": "App Peso Ideal",
+    "slug": "app-peso-ideal",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -20,7 +20,7 @@
       "supportsTablet": true
     },
     "android": {
-      "package": "com.amanda.appimc",
+      "package": "com.amanda.apppesoideal",
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#F1EFEF"
